--- a/environment.yaml
+++ b/environment.yaml
@@ -6,7 +6,7 @@ channels:
  - defaults
 dependencies:
  - parallel-fastq-dump=0.6.5
- - sra-tools-2.10.1
+ - sra-tools=2.10.1
  - bwa=0.7.12
  - cutadapt=1.15
  - samtools=1.9
