Added entry in config.yaml for minimum gap length in genome to split into chunks for variant calling. Also edited rule in Snakefile to pass this value to gap_finder.py.

--- a/config.yaml
+++ b/config.yaml
@@ -10,3 +10,6 @@ cutadapt:
 align:
     threads: 12
     sort_mem: 2G
+
+# Minimum gap length to break genome into sections for variant calling
+split_gap_length: 4000
