Bugfix and modified how interval bedfiles are handled. The shell command to make the one-line bedfile was failing because it also turned underscores in the chromosome names into tabs. I added a rule to parse with python instead. One-line bedfiles are marked temp so they will never exceed the number of cores and disappear immediately after use.

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 units: "units.tsv"
 genome: "ref.fa"
 split_gap_length: 4000
-intervals: "intervals.bed"
+intervals: "data/intervals/intervals.bed"
 fastq_dump:
     threads: 8
     sra_location: "data/sra/"
